--- a/text_generation_task.ipynb
+++ b/text_generation_task.ipynb
@@ -145,7 +145,7 @@
       "source": [
         "# TODO: build the model.\n",
         "# Hints: Use a recurrent layer with inner size of ~128.\n",
-        "# input shape has two dimentions (ignoring batch size)\n",
+        "# input shape has two dimensions (ignoring batch size)\n",
         "# After the recurrent layer, you want a dense layer to transform\n",
         "# the recurrent inner size to output size\n",
         "\n",
@@ -198,8 +198,7 @@
       "cell_type": "code",
       "source": [
         "def print_predictions():\n",
-        "    # Function invoked at end of each epoch. Prints generated text.\n",
-        "\n",
+        "  \n",
         "    start_index = random.randint(0, len(text) - maxlen - 1)\n",
         "    for diversity in [0.2, 0.7, 1.2]:\n",
         "        print('----- diversity:', diversity)\n",
@@ -223,6 +222,7 @@
         "\n",
         "            sys.stdout.write(next_char)\n",
         "            sys.stdout.flush()\n",
+        "            \n",
         "        print()"
       ],
       "execution_count": 0,
